generated/checker-for-evaluation/generated/test-UAF-67801fa67b94ebd0e4da7a77ac2d9f321b75fbe0/build_logs/8/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:59:20: error: invalid conversion from ‘const clang::Stmt*’ to ‘const clang::Expr*’ [-fpermissive]
   59 |   if (!ExprHasName(StoreE, "xef", C))
      |                    ^~~~~~
      |                    |
      |                    const clang::Stmt*
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:15:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Checkers/utility.h:104:30: note:   initializing argument 1 of ‘bool ExprHasName(const clang::Expr*, llvm::StringRef, clang::ento::CheckerContext&)’
  104 | bool ExprHasName(const Expr *E, StringRef Name, CheckerContext &C);
      |                  ~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:63:46: error: invalid conversion from ‘const clang::Stmt*’ to ‘const clang::Expr*’ [-fpermissive]
   63 |   const MemRegion *MR = getMemRegionFromExpr(StoreE, C);
      |                                              ^~~~~~
      |                                              |
      |                                              const clang::Stmt*
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:15:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Checkers/utility.h:45:51: note:   initializing argument 1 of ‘const clang::ento::MemRegion* getMemRegionFromExpr(const clang::Expr*, clang::ento::CheckerContext&)’
   45 | const MemRegion* getMemRegionFromExpr(const Expr* E, CheckerContext &C);
      |                                       ~~~~~~~~~~~~^
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
